# cpp_boost_cmake_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt  lib_unittest.cpp
